--- a/WK05.ipynb
+++ b/WK05.ipynb
@@ -765,6 +765,24 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### A Note about scikit-learn\n",
+        "\n",
+        "\n",
+        "\n",
+        "The `MinMaxScaler` and `StandardScaler` classes that we're using in this notebook are coming from the local `data_utils.py` file. The core functionality of these classes is coming from [Scikit-Learn](https://scikit-learn.org/stable/), the popular machine  learning library for Python, but unlike the original Scikit-Learn implementation, these have been modified to work with `DataFrames` instead of just lists.\n",
+        "\n",
+        "We can use those classes (and other classes) directly from Scikit-Learn, but the return value of their transformations won't be a `DataFrame`. If we want a `DataFrame` we have to do something like:\n",
+        "\n",
+        "```py\n",
+        "houses_std = std_scaler.fit_transform(houses_df.values)\n",
+        "houses_std_df = pd.DataFrame(houses_std, columns=houses_df.columns)\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## One more dataset\n",
         "\n",
         "Let's load..."
@@ -1135,7 +1153,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.13"
+      "version": "3.10.15"
     },
     "vscode": {
       "interpreter": {
